# projectframe

./: README.md  pyproject.toml  setup.py
projectframe/: __init__.py
projectframe/core/: __init__.py  core.py
projectframe/engines/: __init__.py  pandas_engine.py  pandas_h5.py
projectframe/objects/: __init__.py  frame.py  multiframe.py  obsframe.py  unstructured.py
test/: test.h5
